--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -6,3 +6,5 @@ html
         main
 
         h1 My Blog
+        form(method="post", action="api/post/" + post.id + "/upvote")
+        buton(type="submit")upvote
